[package]
name = "sonic-server"
version = "1.4.4"
description = "Fast, lightweight and schema-less search backend."
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
homepage = "https://github.com/valeriansaliou/sonic"
repository = "https://github.com/valeriansaliou/sonic.git"
keywords = ["search", "query", "server", "index"]
categories = ["database-implementations", "web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>", "Baptiste Jamin <baptistejamin@gmail.com>"]

[[bin]]
name = "sonic"
path = "src/main.rs"
doc = false

[dependencies]
log = "0.4"
toml = "0.8"
clap = { version = "3.2", features = ["std", "cargo"] }
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
rand = "0.8"
unicode-segmentation = "1.6"
radix = "0.6"
rocksdb = { version = "0.21", features = ["zstd"] }
fst = "0.3"
fst-levenshtein = "0.3"
fst-regex = "0.3"
regex-syntax = "0.8"
twox-hash = "1.5"
byteorder = "1.4"
hashbrown = "0.14"
linked_hash_set = "0.1"
whatlang = "0.16"
regex = "1.6"
jieba-rs = { version = "0.6", optional = true }
lindera-core = { version = "0.27", optional = true }
lindera-dictionary = { version = "0.27", features = ["unidic"], optional = true }
lindera-tokenizer = { version = "0.27", features = ["unidic"], optional = true }

[target.'cfg(unix)'.dependencies]
nix = "0.18"
tikv-jemallocator = { version = "0.4", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "consoleapi"] }

[features]
default = ["allocator-jemalloc", "tokenizer-chinese"]
allocator-jemalloc = ["tikv-jemallocator"]
tokenizer-chinese = ["jieba-rs"]
tokenizer-japanese = ["lindera-core", "lindera-dictionary", "lindera-tokenizer"]
benchmark = []

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
strip = true

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
