[package]
name = "sonic-server"
version = "1.5.0"
description = "Fast, lightweight and schema-less search backend."
readme = "README.md"
license = "MPL-2.0"
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/valeriansaliou/sonic"
repository = "https://github.com/valeriansaliou/sonic.git"
keywords = ["search", "query", "server", "index"]
categories = ["database-implementations", "web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>", "Baptiste Jamin <baptistejamin@gmail.com>"]

[[bin]]
name = "sonic"
path = "src/main.rs"
doc = false

[dependencies]
log = "0.4"
clap = { version = "4", features = ["std", "cargo"] }
lazy_static = "1"
serde = "1"
serde_derive = "1"
rand = "0.10"
unicode-segmentation = "1"
radix = "0.6"
rocksdb = { version = "0.24", features = ["zstd"] }
fst = "0.3"
fst-levenshtein = "0.3"
fst-regex = "0.3"
regex-syntax = "0.8"
twox-hash = "2"
byteorder = "1"
hashbrown = "0.17"
linked_hash_set = "0.1"
whatlang = "0.18"
regex = "1"
jieba-rs = { version = "0.9", optional = true }
lindera-core = { version = "0.31", optional = true }
lindera-dictionary = { version = "0.31", features = ["unidic"], optional = true }
lindera-tokenizer = { version = "0.31", features = ["unidic"], optional = true }
config = { version = "0.15", default-features = false, features = ["toml"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }
tikv-jemallocator = { version = "0.6", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }

[features]
default = ["allocator-jemalloc", "tokenizer-chinese"]
allocator-jemalloc = ["tikv-jemallocator"]
tokenizer-chinese = ["jieba-rs"]
tokenizer-japanese = ["lindera-core", "lindera-dictionary", "lindera-tokenizer"]
benchmark = []

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
strip = true

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
