[workspace]
resolver = "3"
members = ["core", "server", "client"]

[workspace.package]
license = "MPL-2.0"
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/valeriansaliou/sonic"
repository = "https://github.com/valeriansaliou/sonic.git"
authors = [
    "Valerian Saliou <valerian@valeriansaliou.name>",
    "Baptiste Jamin <baptistejamin@gmail.com>",
    "Rémi Bardon <remi@remibardon.name>",
]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
strip = true

[profile.bench]
inherits = "release"
lto = "thin"
strip = false
