[package]
name = "sonic-core"
version = "0.1.3"
description = "Fast, lightweight and schema-less search backend."
readme = "../README.md"
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = ["search", "query", "server", "index"]
categories = ["database-implementations", "web-programming"]
authors = { workspace = true }

[lib]
name = "sonic"
path = "src/lib.rs"
doc = true

[dependencies]
unicode-normalization = { version = "0.1", default-features = false }
caseless = { version = "0.2", default-features = false }
tracing = { version = "0.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "rc", "std"] }
radix = { version = "0.6", default-features = false }
rocksdb = { version = "0.24", default-features = false, features = ["bindgen-runtime", "lz4", "zstd"] }
fst = { version = "0.3", default-features = false }
fst-levenshtein = { version = "0.3", default-features = false }
twox-hash = { version = "2", default-features = false, features = ["xxhash32"] }
byteorder = { version = "1", default-features = false }
hashbrown = { version = "0.17", default-features = false, features = ["allocator-api2", "default-hasher", "inline-more"] }
indexmap = { version = "2", default-features = false, features = ["std"] }
whatlang = { version = "0.18", default-features = false }
regex = { version = "1", default-features = false, features = ["std", "unicode", "perf"] }
snowball = { package = "waken_snowball", optional = true, version = "0.1", default-features = false }
charabia = { version = "0.9.9", default-features = false }
serde_json = "1.0.150"
base64 = "0.22.1"
zstd = "0.13.3"
emojis = "0.9.0"
unicode-segmentation = "1.13.3"

[dev-dependencies]
config = { version = "0.15", default-features = false, features = ["toml"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt"] }

[features]
default = ["stemming", "tokenizer-chinese"]
stemming = ["dep:snowball"]
tokenizer-chinese = ["charabia/chinese"]
tokenizer-japanese = ["charabia/japanese"]
benchmark = []
