[package]
name = "sonic-core"
version = "0.1.3"
description = "Fast, lightweight and schema-less search backend."
readme = "../README.md"
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = ["search", "query", "server", "index"]
categories = ["database-implementations", "web-programming"]
authors = { workspace = true }

[lib]
name = "sonic"
path = "src/lib.rs"
doc = true

[dependencies]
unicode-normalization = { version = "0.1", default-features = false }
caseless = { version = "0.2", default-features = false }
tracing = { version = "0.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "rc", "std"] }
charabia = { default-features = false, git = "https://github.com/RemiBardon/charabia.git", branch = "flexible-allow-list" }
# charabia = { version = "0.9", default-features = false }
radix = { version = "0.6", default-features = false }
rocksdb = { version = "0.24", default-features = false, features = ["bindgen-runtime", "zstd"] }
fst = { version = "0.3", default-features = false }
fst-levenshtein = { version = "0.3", default-features = false }
fst-regex = { version = "0.3", default-features = false }
regex-syntax = { version = "0.8", default-features = false, features = ["std", "unicode"] }
twox-hash = { version = "2", default-features = false, features = ["xxhash32"] }
byteorder = { version = "1", default-features = false }
hashbrown = { version = "0.17", default-features = false, features = ["allocator-api2", "default-hasher", "inline-more"] }
indexmap = { version = "2", default-features = false, features = ["std"] }
linked_hash_set = { version = "0.1", default-features = false }
whatlang = { version = "0.18", default-features = false }
regex = { version = "1", default-features = false, features = ["std", "unicode", "perf"] }
snowball = { package = "waken_snowball", optional = true, version = "0.1", default-features = false }

[dev-dependencies]
config = { version = "0.15", default-features = false, features = ["toml"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt"] }

[features]
# NOTE: Japanese and Korean are disabled by default because they rely on the
#   heavy `lindera` crate.
default = ["stemming", "tokenizer-chinese", "tokenizer-german", "tokenizer-greek", "tokenizer-hebrew", "tokenizer-khmer", "tokenizer-swedish", "tokenizer-thai", "tokenizer-turkish", "tokenizer-vietnamese"]
stemming = ["dep:snowball"]
tokenizer-chinese = ["charabia/chinese"]
tokenizer-german = ["charabia/german-segmentation"]
tokenizer-greek = ["charabia/greek"]
tokenizer-hebrew = ["charabia/hebrew"]
tokenizer-japanese = ["charabia/japanese"]
tokenizer-khmer = ["charabia/khmer"]
tokenizer-korean = ["charabia/korean"]
tokenizer-swedish = ["charabia/swedish-recomposition"]
tokenizer-thai = ["charabia/thai"]
tokenizer-turkish = ["charabia/turkish"]
tokenizer-vietnamese = ["charabia/vietnamese"]
benchmark = []
