[package]
name = "sonic-router"
version = "0.1.0"
description = "Shard-aware Sonic Channel router."
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[lib]
name = "sonic_router"
path = "src/lib.rs"

[[bin]]
name = "sonic-router"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "=4.6.1", default-features = false, features = ["std", "cargo"] }
config = { version = "=0.15.25", default-features = false, features = ["toml"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "=1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.150"
tracing = { version = "=0.1.44", default-features = false }
tracing-subscriber = { version = "=0.3.23", default-features = false, features = ["std", "fmt"] }
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
nix = { version = "=0.31.3", default-features = false, features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", default-features = false, features = ["Win32_System_Console"] }
